pages/mesosphere/dcos/1.13/cli/command-reference/dcos-node/index.md
---
layout: layout.pug
navigationTitle:  dcos node
title: dcos node
menuWeight: 11
excerpt: Displaying DC/OS node information
render: mustache
model: /mesosphere/dcos/1.13/data.yml
enterprise: false
---

<p class="message--warning"><strong>WARNING: </strong>Use of the <tt>dcos node</tt> command for listing nodes is deprecated from DC/OS 1.13 onward. To list dcos nodes, use the <tt><a href="/mesosphere/dcos/1.13/cli/command-reference/dcos-node/dcos-node-list/">dcos node list</a></tt> command instead.</p>

# Description
The `dcos node` commands allow you to view DC/OS node information.


# Usage

```bash
dcos node [OPTION]
```

# Options

| Name |  Description |
|---------|-------------|
| `--help, h`   |   Displays usage. |
| `--info`   |  Displays a short description of this subcommand. |
| `--json`   |    Displays JSON-formatted data. |
| `--version`   |  Displays version information. |


# Example

```bash
dcos node
Getting the list of nodes from `dcos node` is deprecated. Please use `dcos node list`.
   HOSTNAME        IP            PUBLIC IP(S)                       ID                            TYPE            REGION          ZONE
  10.0.2.221   10.0.2.221       213.61.89.166       02b1bdc8-2bac-44a0-81ff-65816936b97b-S1   agent            aws/us-west-2  aws/us-west-2a
  10.0.5.54    10.0.5.54        213.61.89.167       02b1bdc8-2bac-44a0-81ff-65816936b97b-S0   agent (public)   aws/us-west-2  aws/us-west-2a
master.mesos.  10.0.6.122       213.61.89.168       02b1bdc8-2bac-44a0-81ff-65816936b97b      master (leader)  aws/us-west-2  aws/us-west-2a
```

# Commands

